[package]
name = "nginx-rs"
version = "0.2.0"
authors = ["Sehyo Chang <sehyo@nginx.com>"]
edition = "2018"


[features]
# default = ["with-compat","with-threads","with-http_addition_module","with-http_auth_request_module",
# "with-http_gunzip_module","with-http_gzip_static_module","with-http_random_index_module",
# "with-http_realip_module","with-http_secure_link_module","with-http_slice_module",
# "with-http_stub_status_module","with-http_sub_module","with-stream","with-stream_realip_module",
# "with-stream_ssl_preread_module","with-file-aio","with-http_ssl_module","with-stream_ssl_module"
# ]

with-compat=["nginx-sys/with-compat"]
with-threads=["nginx-sys/with-threads"]
with-http_addition_module=["nginx-sys/with-http_addition_module"]
with-http_auth_request_module=["nginx-sys/with-http_auth_request_module"]
with-http_gunzip_module=["nginx-sys/with-http_gunzip_module"]
with-http_gzip_static_module=["nginx-sys/with-http_gzip_static_module"]
with-http_random_index_module=["nginx-sys/with-http_random_index_module"]
with-http_realip_module=["nginx-sys/with-http_realip_module"]
with-http_secure_link_module=["nginx-sys/with-http_secure_link_module"]
with-http_slice_module=["nginx-sys/with-http_slice_module"]
with-http_stub_status_module=["nginx-sys/with-http_stub_status_module"]
with-http_sub_module=["nginx-sys/with-http_sub_module"]
with-stream=["nginx-sys/with-stream"]
with-stream_realip_module=["nginx-sys/with-stream_realip_module"]
with-stream_ssl_preread_module=["nginx-sys/with-stream_ssl_preread_module"]
with-file-aio=["nginx-sys/with-file-aio"]
with-http_ssl_module=["nginx-sys/with-http_ssl_module"]
with-stream_ssl_module=["nginx-sys/with-http_ssl_module"]

[dependencies]
nginx-sys = { path = "nginx-sys" }
nginx-module = { path = "nginx-module" }
const-field-offset = "0.1.2"

[workspace]
members = [
    "nginx-sys",
    "nginx-module",
]

[lib]
name = "nginx_rs"