[package]
name = "nginx-sys"
version = "0.1.0"
authors = ["David Coles <coles.david@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Nginx modules in Rust"
homepage = "https://github.com/dcoles/nginx-rs"
repository = "https://github.com/dcoles/nginx-rs"
readme = "../README.md"
keywords = ["nginx", "modules"]
categories = ["api-bindings", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# default = ["with-compat","with-threads","with-http_addition_module","with-http_auth_request_module",
# "with-http_gunzip_module","with-http_gzip_static_module","with-http_random_index_module",
# "with-http_realip_module","with-http_secure_link_module","with-http_slice_module",
# "with-http_stub_status_module","with-http_sub_module","with-stream","with-stream_realip_module",
# "with-stream_ssl_preread_module","with-file-aio","with-http_ssl_module","with-stream_ssl_module"
# ]
with-compat=[]
with-threads=[]
with-http_addition_module=[]
with-http_auth_request_module=[]
with-http_gunzip_module=[]
with-http_gzip_static_module=[]
with-http_random_index_module=[]
with-http_realip_module=[]
with-http_secure_link_module=[]
with-http_slice_module=[]
with-http_stub_status_module=[]
with-http_sub_module=[]
with-stream=[]
with-stream_realip_module=[]
with-stream_ssl_preread_module=[]
with-file-aio=[]
with-http_ssl_module=[]
with-stream_ssl_module=[]

[dependencies]

[build-dependencies]
bindgen = "0.59.2"
tempfile = "3.3.0"

[lib]
# proc-macro = true
